Adding 4 new repos.

--- a/index.html
+++ b/index.html
@@ -211,6 +211,15 @@ scm-1:&nbsp;<a href="cv-scm-1.rockspec">rockspec</a><br/></td></tr>
 scm-1:&nbsp;<a href="cwrap-scm-1.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="dataset"></a><a href="#dataset" class="pkg"><b>dataset</b></a> - A dataset library, for Torch<br/>
+</p><blockquote><p><br/>
+
+<font size="-1"><a href="git://github.com/twitter/torch-dataset.git">latest sources</a> | <a href="-" target="_blank">project homepage</a> | License: MIT</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="dataset-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="display"></a><a href="#display" class="pkg"><b>display</b></a> - A browser-based graphics server with a Torch client.<br/>
 </p><blockquote><p>A simple node.js server pushes images and charts to the browser.<br/>
 
@@ -218,6 +227,15 @@ scm-1:&nbsp;<a href="cwrap-scm-1.rockspec">rockspec</a><br/></td></tr>
 </blockquote></a></td>
 <td class="version">
 scm-0:&nbsp;<a href="display-scm-0.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
+<p><a name="distlearn"></a><a href="#distlearn" class="pkg"><b>distlearn</b></a> - A Distributed Learning library, for Torch<br/>
+</p><blockquote><p><br/>
+
+<font size="-1"><a href="git://github.com/twitter/torch-distlearn.git">latest sources</a> | <a href="-" target="_blank">project homepage</a> | License: MIT</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="distlearn-scm-1.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
 <p><a name="dok"></a><a href="#dok" class="pkg"><b>dok</b></a> - Support for the old torch7 dok system<br/>
@@ -407,6 +425,15 @@ scm-1:&nbsp;<a href="hash-scm-1.rockspec">rockspec</a><br/></td></tr>
 </blockquote></a></td>
 <td class="version">
 1.0-0:&nbsp;<a href="inn-1.0-0.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
+<p><a name="ipc"></a><a href="#ipc" class="pkg"><b>ipc</b></a> - A set of primitives for ipc computation in Torch<br/>
+</p><blockquote><p><br/>
+
+<font size="-1"><a href="git://github.com/twitter/torch-ipc.git">latest sources</a> | <a href="-" target="_blank">project homepage</a> | License: MIT</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="ipc-scm-1.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
 <p><a name="itorch"></a><a href="#itorch" class="pkg"><b>itorch</b></a> - iPython kernel for Lua / Torch<br/>
@@ -866,6 +893,15 @@ scm-1:&nbsp;<a href="thmap-scm-1.rockspec">rockspec</a><br/></td></tr>
 </blockquote></a></td>
 <td class="version">
 scm-1:&nbsp;<a href="threads-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
+<p><a name="thrift"></a><a href="#thrift" class="pkg"><b>thrift</b></a> - Thrift serialization for Torch<br/>
+</p><blockquote><p><br/>
+
+<font size="-1"><a href="git://github.com/twitter/torch-thrift.git">latest sources</a> | <a href="-" target="_blank">project homepage</a> | License: MIT</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="thrift-scm-1.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
 <p><a name="torch"></a><a href="#torch" class="pkg"><b>torch</b></a> - Torch7<br/>
