--- a/index.html
+++ b/index.html
@@ -913,13 +913,13 @@ scm-1:&nbsp;<a href="thrift-scm-1.rockspec">rockspec</a><br/></td></tr>
 scm-1:&nbsp;<a href="torch-scm-1.rockspec">rockspec</a><br/>7.scm-0:&nbsp;<a href="torch-7.scm-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
-<p><a name="torch-word-emb"></a><a href="#torch-word-emb" class="pkg"><b>torch-word-emb</b></a> - load word2vec or glove word vectors to torch.Tensor<br/>
-</p><blockquote><p> load word2vec or glove word vectors to torch.Tensor <br/>
+<p><a name="torch-word-emb"></a><a href="#torch-word-emb" class="pkg"><b>torch-word-emb</b></a> - load word2vec or glove word vectors to torch Tensor<br/>
+</p><blockquote><p> load word2vec or glove word vectors to torch Tensor <br/>
 
 <font size="-1"><a href="git://github.com/iamalbert/torch-word-emb">latest sources</a> | <a href="https://github.com/iamalbert/torch-word-emb" target="_blank">project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
-1.1-6:&nbsp;<a href="torch-word-emb-1.1-6.rockspec">rockspec</a><br/></td></tr>
+1.2-0:&nbsp;<a href="torch-word-emb-1.2-0.rockspec">rockspec</a><br/>1.1-6:&nbsp;<a href="torch-word-emb-1.1-6.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
 <p><a name="torchffi"></a><a href="#torchffi" class="pkg"><b>torchffi</b></a> - Enables FFI bindings for Torch<br/>
