add findcuda to manifest

--- a/index.html
+++ b/index.html
@@ -319,6 +319,15 @@ scm-1:&nbsp;<a href="env-scm-1.rockspec">rockspec</a><br/></td></tr>
 scm-1:&nbsp;<a href="fftw3-scm-1.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="findcuda"></a><a href="#findcuda" class="pkg"><b>findcuda</b></a> - cmake FindCUDA module<br/>
+</p><blockquote><p> <br/>
+
+<font size="-1"><a href="git://github.com/hughperkins/FindCUDA.git">latest sources</a> | <a href="https://github.com/hughperkins/FindCUDA.git" target="_blank">project homepage</a> | License: MIT</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="findcuda-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="fn"></a><a href="#fn" class="pkg"><b>fn</b></a> - Some functional programming tools for Lua and Torch.<br/>
 </p><blockquote><p><br/>
 
