--- a/index.html
+++ b/index.html
@@ -220,6 +220,15 @@ scm-1:&nbsp;<a href="cv-scm-1.rockspec">rockspec</a><br/></td></tr>
 scm-1:&nbsp;<a href="cwrap-scm-1.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="dataload"></a><a href="#dataload" class="pkg"><b>dataload</b></a> - A collection of Torch dataset loaders<br/>
+</p><blockquote><p> Simplified data loading and sampling package <br/>
+
+<font size="-1"><a href="git://github.com/Element-Research/dataload">latest sources</a> | <a href="https://github.com/Element-Research/dataload" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="dataload-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="dataset"></a><a href="#dataset" class="pkg"><b>dataset</b></a> - A dataset library, for Torch<br/>
 </p><blockquote><p><br/>
 
