--- a/index.html
+++ b/index.html
@@ -661,6 +661,15 @@ scm-0:&nbsp;<a href="ns-redis-scm-0.rockspec">rockspec</a><br/></td></tr>
 1.0.5-0:&nbsp;<a href="optim-1.0.5-0.rockspec">rockspec</a><br/>1.0.4-0:&nbsp;<a href="optim-1.0.4-0.rockspec">rockspec</a><br/>1.0.3-1:&nbsp;<a href="optim-1.0.3-1.rockspec">rockspec</a><br/>1.0.3-0:&nbsp;<a href="optim-1.0.3-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="optnet"></a><a href="#optnet" class="pkg"><b>optnet</b></a> - This package provides memory optimizations for nn library in Torch7.<br/>
+</p><blockquote><p><br/>
+
+<font size="-1"><a href="git://github.com/fmassa/optimize-net">latest sources</a> | <a href="git://github.com/fmassa/optimize-net" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="optnet-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="parallel"></a><a href="#parallel" class="pkg"><b>parallel</b></a> - A package to easily fork processes, for Torch<br/>
 </p><blockquote><p>A package to fork and serialize data between multiple processes. <br/>
 
