--- a/index.html
+++ b/index.html
@@ -652,6 +652,15 @@ scm-1:&nbsp;<a href="nninit-scm-1.rockspec">rockspec</a><br/></td></tr>
 scm-0:&nbsp;<a href="ns-redis-scm-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="openblas-conv"></a><a href="#openblas-conv" class="pkg"><b>openblas-conv</b></a> - SpatialConvolutionMM implementation with virtual matrices<br/>
+</p><blockquote><p> <br/>
+
+<font size="-1"><a href="git://github.com/mvitez/OpenBLAS-conv.git">latest sources</a> | <a href="https://github.com/mvitez/OpenBLAS-conv" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+1.0-1:&nbsp;<a href="openblas-conv-1.0-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="optim"></a><a href="#optim" class="pkg"><b>optim</b></a> - An optimization library for Torch.<br/>
 </p><blockquote><p>This package contains several optimization routines for Torch. <br/>
 
