--- a/index.html
+++ b/index.html
@@ -463,6 +463,15 @@ scm-1:&nbsp;<a href="hash-scm-1.rockspec">rockspec</a><br/></td></tr>
 scm-1:&nbsp;<a href="ipc-scm-1.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="iterm"></a><a href="#iterm" class="pkg"><b>iterm</b></a> - Display images directly in iTerm2<br/>
+</p><blockquote><p>Images, PDF, graphs, etc. via iTerm2 (OS X)<br/>
+
+<font size="-1"><a href="git://github.com/szagoruyko/iterm.torch">latest sources</a> | <a href="https://github.com/szagoruyko/iterm.torch" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="iterm-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="itorch"></a><a href="#itorch" class="pkg"><b>itorch</b></a> - iPython kernel for Lua / Torch<br/>
 </p><blockquote><p> <br/>
 
