fixing cutorch rockspec

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ scm-1:&nbsp;<a href="cunnx-scm-1.rockspec">rockspec</a><br/></td></tr>
 <font size="-1"><a href="git://github.com/torch/cutorch.git">latest sources</a> | <a href="https://github.com/torch/cutorch" target="_blank">project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
-scm-1:&nbsp;<a href="cutorch-scm-1.rockspec">rockspec</a><br/></td></tr>
+scm-1:&nbsp;<a href="cutorch-scm-1.rockspec">rockspec</a><br/>1.0-0:&nbsp;<a href="cutorch-1.0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
 <p><a name="cv"></a><a href="#cv" class="pkg"><b>cv</b></a> - OpenCV bindings for LuaJIT+Torch<br/>
