adding rockspec cunn-1.0-0.rockspec

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ scm-1:&nbsp;<a href="cudnn-scm-1.rockspec">rockspec</a><br/></td></tr>
 <font size="-1"><a href="git://github.com/torch/cunn.git">latest sources</a> | <a href="https://github.com/torch/cunn" target="_blank">project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
-scm-1:&nbsp;<a href="cunn-scm-1.rockspec">rockspec</a><br/></td></tr>
+scm-1:&nbsp;<a href="cunn-scm-1.rockspec">rockspec</a><br/>1.0-0:&nbsp;<a href="cunn-1.0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
 <p><a name="cunnx"></a><a href="#cunnx" class="pkg"><b>cunnx</b></a> - Torch CUDA Experimental Neural Network Modules<br/>
