Updating manifest file for fbpython

--- a/index.html
+++ b/index.html
@@ -301,6 +301,15 @@ scm-1:&nbsp;<a href="dpnn-scm-1.rockspec">rockspec</a><br/></td></tr>
 scm-1:&nbsp;<a href="env-scm-1.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="fbpython"></a><a href="#fbpython" class="pkg"><b>fbpython</b></a> - FB Lua - Python Bridge<br/>
+</p><blockquote><p> Allows for calling python functions from Lua. Torch Tensors and numpy arrays are also automatically transferred between each other. <br/>
+
+<font size="-1"><a href="git://github.com/facebook/fblualib">latest sources</a> | <a href="https://github.com/facebook/fblualib" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+0.1-2:&nbsp;<a href="fbpython-0.1-2.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="fex"></a><a href="#fex" class="pkg"><b>fex</b></a> - A package for feature extraction in Torch<br/>
 </p><blockquote><p>Provides SIFT and dSIFT modules. <br/>
 
@@ -574,7 +583,7 @@ scm-0:&nbsp;<a href="metriclearning-scm-0.rockspec">rockspec</a><br/></td></tr>
 <p><a name="mnist"></a><a href="#mnist" class="pkg"><b>mnist</b></a> - Mnist dataset<br/>
 </p><blockquote><p> <br/>
 
-<font size="-1"><a href="git://github.com/andresy/mnist.git">latest sources</a> | <a href="https://github.com/torch/mnist" target="_blank">project homepage</a> | License: BSD</font></p>
+<font size="-1"><a href="git://github.com/andresy/mnist.git">latest sources</a> | <a href="https://github.com/andresy/mnist" target="_blank">project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
 scm-1:&nbsp;<a href="mnist-scm-1.rockspec">rockspec</a><br/></td></tr>
