--- a/index.html
+++ b/index.html
@@ -76,6 +76,15 @@ scm-0:&nbsp;<a href="buffer-scm-0.rockspec">rockspec</a><br/></td></tr>
 1.0-0:&nbsp;<a href="caffe-1.0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="caffegraph"></a><a href="#caffegraph" class="pkg"><b>caffegraph</b></a> - Load Caffe networks in Torch7<br/>
+</p><blockquote><p> <br/>
+
+<font size="-1"><a href="git://github.com/nhynes/caffegraph">latest sources</a> | <a href="https://github.com/nhynes/caffegraph" target="_blank">project homepage</a> | License: MIT</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="caffegraph-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="cairo"></a><a href="#cairo" class="pkg"><b>cairo</b></a> - A FFI interface to Cairo Graphics<br/>
 </p><blockquote><p> See <a href="http://cairographics.org" target="_blank">http://cairographics.org</a> for more details. <br/>
 
