--- a/index.html
+++ b/index.html
@@ -751,6 +751,15 @@ scm-0:&nbsp;<a href="persist-scm-0.rockspec">rockspec</a><br/></td></tr>
 0-0:&nbsp;<a href="pprint-0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="pretty-nn"></a><a href="#pretty-nn" class="pkg"><b>pretty-nn</b></a> - Brings some colours to the borin nn<br/>
+</p><blockquote><p> It allows to make sense of your architecture when things start growing to a reasonable size. <br/>
+
+<font size="-1"><a href="git://github.com/Atcold/torch-pretty-nn">latest sources</a>  | License: N/A</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="pretty-nn-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="python"></a><a href="#python" class="pkg"><b>python</b></a> - A wrapper to Python<br/>
 </p><blockquote><p>Load a Python env into Lua. <br/>
 
