--- a/index.html
+++ b/index.html
@@ -1048,6 +1048,15 @@ scm-1:&nbsp;<a href="torchx-scm-1.rockspec">rockspec</a><br/></td></tr>
 scm-1:&nbsp;<a href="trepl-scm-1.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="twrl"></a><a href="#twrl" class="pkg"><b>twrl</b></a> - Reinforcement Learning for Torch and Lua<br/>
+</p><blockquote><p> torch-twrl is a Reinforcement Learning framework built for Torch. It interfaces with OpenAI Gym. <br/>
+
+<font size="-1"><a href="gitrec://github.com/twitter/torch-twrl.git">latest sources</a> | <a href="https://github.com/twitter/torch-twrl" target="_blank">project homepage</a> | License: MIT</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="twrl-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="underscore"></a><a href="#underscore" class="pkg"><b>underscore</b></a> - Underscore is a utility-belt library for Lua<br/>
 </p><blockquote><p> underscore-lua is a utility-belt library for Lua that provides a lot of the functional programming support that you would expect in or Ruby's Enumerable. <br/>
 
