--- a/index.html
+++ b/index.html
@@ -670,6 +670,15 @@ scm-1:&nbsp;<a href="nninit-scm-1.rockspec">rockspec</a><br/></td></tr>
 0.1-1:&nbsp;<a href="nnx-0.1-1.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="notifycenter"></a><a href="#notifycenter" class="pkg"><b>notifycenter</b></a> - Notify Center is the easiest way to push notifications to your iPhone form Lua.<br/>
+</p><blockquote><p> Notify Center is the easiest way to push notifications to your iPhone from major Deep Learning frameworks...with a single line of code! <br/>
+
+<font size="-1"><a href="git://github.com/aminert/notifycenter-lua">latest sources</a> | <a href="http://notify.center" target="_blank">project homepage</a> | License: MIT</font></p>
+</blockquote></a></td>
+<td class="version">
+0.0-1:&nbsp;<a href="notifycenter-0.0-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="ns-redis"></a><a href="#ns-redis" class="pkg"><b>ns-redis</b></a> - A layer on top of redis-async to allow automatic use of namespaces<br/>
 </p><blockquote><p>A layer on top of redis-async to allow automatic use of namespaces <br/>
 
