--- a/index.html
+++ b/index.html
@@ -967,6 +967,15 @@ scm-1:&nbsp;<a href="sundown-scm-1.rockspec">rockspec</a><br/></td></tr>
 scm-1:&nbsp;<a href="tds-scm-1.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="terra"></a><a href="#terra" class="pkg"><b>terra</b></a> - A low-level counterpart to Lua.<br/>
+</p><blockquote><p><br/>
+
+<font size="-1"><a href="git://github.com/zdevito/terra.git">latest sources</a> | <a href="" target="_blank">project homepage</a> | License: MIT</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="terra-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="thmap"></a><a href="#thmap" class="pkg"><b>thmap</b></a> - Map jobs onto th nodes.<br/>
 </p><blockquote><p>Map jobs onto th nodes. <br/>
 
