added socketfile rocks

--- a/index.html
+++ b/index.html
@@ -922,6 +922,15 @@ scm-1:&nbsp;<a href="signal-scm-1.rockspec">rockspec</a><br/></td></tr>
 scm-1:&nbsp;<a href="sndfile-scm-1.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="socketfile"></a><a href="#socketfile" class="pkg"><b>socketfile</b></a> - File-over-socket support for Torch<br/>
+</p><blockquote><p> Adds torch.SocketFile and torch.SocketFileServer classes to Torch. <br/>
+
+<font size="-1"><a href="git://github.com/torch/socketfile.git">latest sources</a> | <a href="https://github.com/torch/socketfile" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="socketfile-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="strict"></a><a href="#strict" class="pkg"><b>strict</b></a> - Detect reading of undeclared variables and creating of global variables<br/>
 </p><blockquote><p><br/>
 
