--- a/index.html
+++ b/index.html
@@ -1129,6 +1129,15 @@ scm-1:&nbsp;<a href="utf8-scm-1.rockspec">rockspec</a><br/></td></tr>
 1.0-0:&nbsp;<a href="videograph-1.0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="vizdoom"></a><a href="#vizdoom" class="pkg"><b>vizdoom</b></a> - Reinforcement learning platform based on Doom<br/>
+</p><blockquote><p> ViZDoom allows developing AI bots that play Doom using only the visual information (the screen buffer). It is primarily intended for research in machine visual learning, and deep reinforcement learning, in particular. <br/>
+
+<font size="-1"><a href="git://github.com/Marqt/ViZDoom">latest sources</a> | <a href="http://vizdoom.cs.put.edu.pl/" target="_blank">project homepage</a> | License: N/A</font></p>
+</blockquote></a></td>
+<td class="version">
+1.1.0-1:&nbsp;<a href="vizdoom-1.1.0-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="xlua"></a><a href="#xlua" class="pkg"><b>xlua</b></a> - Extra Lua functions.<br/>
 </p><blockquote><p>Lua is pretty compact in terms of built-in functionalities: this package extends the table and string libraries, and provide other general purpose tools (progress bar, ...). <br/>
 
