--- a/index.html
+++ b/index.html
@@ -796,6 +796,15 @@ scm-1:&nbsp;<a href="qtlua-scm-1.rockspec">rockspec</a><br/></td></tr>
 scm-1:&nbsp;<a href="qttorch-scm-1.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="rainbowlog"></a><a href="#rainbowlog" class="pkg"><b>rainbowlog</b></a> - Colorful screen logging helper for Lua.<br/>
+</p><blockquote><p> Colorful screen logging helper for Lua. <br/>
+
+<font size="-1"><a href="git://github.com/cdluminate/torch-rainbowlog">latest sources</a> | <a href="https://github.com/cdluminate/torch-rainbowlog" target="_blank">project homepage</a> | License: MIT</font></p>
+</blockquote></a></td>
+<td class="version">
+1.0-0:&nbsp;<a href="rainbowlog-1.0-0.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="randomkit"></a><a href="#randomkit" class="pkg"><b>randomkit</b></a> - Numpy's randomkit, wrapped for Torch<br/>
 </p><blockquote><p>Provides and wraps the wide array of non-uniform random variate generators from the Randomkit C library, used at the heart of NumPy and distributed with permission. Interfaced with Torch's RNG functions to keep one single stream.<br/>
 
