add multiprogress rock

--- a/index.html
+++ b/index.html
@@ -598,6 +598,15 @@ scm-0:&nbsp;<a href="metriclearning-scm-0.rockspec">rockspec</a><br/></td></tr>
 scm-1:&nbsp;<a href="mnist-scm-1.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="multiprogress"></a><a href="#multiprogress" class="pkg"><b>multiprogress</b></a> - Advanced progress bar routines for thorough info logging.<br/>
+</p><blockquote><p>Widely inspired from xlua's progress function: this package extends the progress function and allows you to log info on several lines and multiple progress bars, to keep track of the info you need. <br/>
+
+<font size="-1"><a href="git://github.com/ClementPinard/multiprogress">latest sources</a> | <a href="https://github.com/ClementPinard/multiprogress" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+1.0-0:&nbsp;<a href="multiprogress-1.0-0.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="nccl"></a><a href="#nccl" class="pkg"><b>nccl</b></a> - Torch7 FFI bindings for NVIDIA nccl kernels!<br/>
 </p><blockquote><p><br/>
 
