add visdom rockspec

--- a/index.html
+++ b/index.html
@@ -1147,6 +1147,15 @@ scm-1:&nbsp;<a href="utf8-scm-1.rockspec">rockspec</a><br/></td></tr>
 1.0-0:&nbsp;<a href="videograph-1.0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="visdom"></a><a href="#visdom" class="pkg"><b>visdom</b></a> - A tool for visualizing live, rich data for Torch and Numpy.<br/>
+</p><blockquote><p> A tool for visualizing live, rich data for Torch and Numpy. <br/>
+
+<font size="-1"><a href="git://github.com/facebookresearch/visdom.git">latest sources</a> | <a href="https://github.com/facebookresearch/visdom" target="_blank">project homepage</a> | License: Creative Commons Attribution-NonCommercial 4.0 International Public License</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="visdom-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="vizdoom"></a><a href="#vizdoom" class="pkg"><b>vizdoom</b></a> - Reinforcement learning platform based on Doom<br/>
 </p><blockquote><p> ViZDoom allows developing AI bots that play Doom using only the visual information (the screen buffer). It is primarily intended for research in machine visual learning, and deep reinforcement learning, in particular. <br/>
 
