added vector package

--- a/index.html
+++ b/index.html
@@ -1138,6 +1138,15 @@ scm-1:&nbsp;<a href="utf8-scm-1.rockspec">rockspec</a><br/></td></tr>
 0-0:&nbsp;<a href="util-0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="vector"></a><a href="#vector" class="pkg"><b>vector</b></a> - Tensor-based vector implementations.<br/>
+</p><blockquote><p> Three tensor-based vector implementations: vector.tensor, vector.atomic, and vector.string. <br/>
+
+<font size="-1"><a href="git://github.com/torch/vector.git">latest sources</a> | <a href="https://github.com/torch/vector" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="vector-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="videograph"></a><a href="#videograph" class="pkg"><b>videograph</b></a> - A video/graph library for Torch<br/>
 </p><blockquote><p>This package provides routines to construct graphs on videos, segment them, build trees out of them, and convert them back to videos. <br/>
 
