--- a/index.html
+++ b/index.html
@@ -985,6 +985,15 @@ scm-1:&nbsp;<a href="sundown-scm-1.rockspec">rockspec</a><br/></td></tr>
 1.1-0:&nbsp;<a href="sys-1.1-0.rockspec">rockspec</a><br/>1.0-0:&nbsp;<a href="sys-1.0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="tbc"></a><a href="#tbc" class="pkg"><b>tbc</b></a> - Torch Temporal Convolution TBC Implementation<br/>
+</p><blockquote><p> <br/>
+
+<font size="-1"><a href="git://github.com/gchanan/TemporalConvolutionTBC.git">latest sources</a> | <a href="https://github.com/gchanan/TemporalConvolutionTBC" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="tbc-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="tds"></a><a href="#tds" class="pkg"><b>tds</b></a> - Standard C data structures for LuaJIT<br/>
 </p><blockquote><p> <br/>
 
