--- a/index.html
+++ b/index.html
@@ -1075,6 +1075,15 @@ scm-1:&nbsp;<a href="torch-scm-1.rockspec">rockspec</a><br/>7.scm-0:&nbsp;<a hre
 scm-1:&nbsp;<a href="torchnet-scm-1.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="torchnet-sequential"></a><a href="#torchnet-sequential" class="pkg"><b>torchnet-sequential</b></a> - A torchnet package for working with sequential data<br/>
+</p><blockquote><p> A torchnet package for working with sequential data <br/>
+
+<font size="-1"><a href="git://github.com/torchnet/sequential.git">latest sources</a> | <a href="https://github.com/torchnet/sequential" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="torchnet-sequential-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="torchx"></a><a href="#torchx" class="pkg"><b>torchx</b></a> - torch extensions<br/>
 </p><blockquote><p> Experimental torch extensions <br/>
 
