--- a/index.html
+++ b/index.html
@@ -598,6 +598,15 @@ scm-0:&nbsp;<a href="metriclearning-scm-0.rockspec">rockspec</a><br/></td></tr>
 scm-1:&nbsp;<a href="mnist-scm-1.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="moses"></a><a href="#moses" class="pkg"><b>moses</b></a> - Utility-belt library for functional programming in Lua<br/>
+</p><blockquote><p> A utility-belt library for functional programming, which complements the built-in Lua table library, making easier operations on arrays, lists, collections. <br/>
+
+<font size="-1"><a href="https://github.com/Yonaba/Moses/archive/Moses-1.6.1-1.tar.gz">latest sources</a> | <a href="http://yonaba.github.com/Moses/" target="_blank">project homepage</a> | License: MIT <http://www.opensource.org/licenses/mit-license.php></font></p>
+</blockquote></a></td>
+<td class="version">
+1.6.1-1:&nbsp;<a href="moses-1.6.1-1.rockspec">rockspec</a><br/>1.6.0-1:&nbsp;<a href="moses-1.6.0-1.rockspec">rockspec</a><br/>1.5.1-1:&nbsp;<a href="moses-1.5.1-1.rockspec">rockspec</a><br/>1.5.0-1:&nbsp;<a href="moses-1.5.0-1.rockspec">rockspec</a><br/>1.4.0-1:&nbsp;<a href="moses-1.4.0-1.rockspec">rockspec</a><br/>1.3.2.1-1:&nbsp;<a href="moses-1.3.2.1-1.rockspec">rockspec</a><br/>1.3.2-1:&nbsp;<a href="moses-1.3.2-1.rockspec">rockspec</a><br/>1.3.1-1:&nbsp;<a href="moses-1.3.1-1.rockspec">rockspec</a><br/>1.3-1:&nbsp;<a href="moses-1.3-1.rockspec">rockspec</a><br/>1.3-0:&nbsp;<a href="moses-1.3-0.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="multiprogress"></a><a href="#multiprogress" class="pkg"><b>multiprogress</b></a> - Advanced progress bar routines for thorough info logging.<br/>
 </p><blockquote><p>Widely inspired from xlua's progress function: this package extends the progress function and allows you to log info on several lines and multiple progress bars, to keep track of the info you need. <br/>
 
