rnn points to torch/rnn

--- a/index.html
+++ b/index.html
@@ -895,10 +895,10 @@ scm-1:&nbsp;<a href="regress-scm-1.rockspec">rockspec</a><br/></td></tr>
 0.1-0:&nbsp;<a href="restclient-0.1-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
-<p><a name="rnn"></a><a href="#rnn" class="pkg"><b>rnn</b></a> - A Recurrent Neural Network library that extends Torch's nn<br/>
-</p><blockquote><p>A library to build RNNs, LSTMs, BRNNs, BLSTMs, and so forth and so on. <br/>
+<p><a name="rnn"></a><a href="#rnn" class="pkg"><b>rnn</b></a> - A recurrent neural network library for Torch<br/>
+</p><blockquote><p>A library to build RNNs, LSTMs, GRUs, BRNNs, BLSTMs, and so forth and so on. <br/>
 
-<font size="-1"><a href="git://github.com/Element-Research/rnn">latest sources</a> | <a href="https://github.com/Element-Research/rnn" target="_blank">project homepage</a> | License: BSD</font></p>
+<font size="-1"><a href="git://github.com/torch/rnn">latest sources</a> | <a href="https://github.com/torch/rnn" target="_blank">project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
 scm-1:&nbsp;<a href="rnn-scm-1.rockspec">rockspec</a><br/></td></tr>
