--- a/index.html
+++ b/index.html
@@ -1075,6 +1075,15 @@ scm-1:&nbsp;<a href="torch-scm-1.rockspec">rockspec</a><br/>7.scm-0:&nbsp;<a hre
 1.1.alpha-0:&nbsp;<a href="torchffi-1.1.alpha-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="torchmpi"></a><a href="#torchmpi" class="pkg"><b>torchmpi</b></a> - MPI for Torch<br/>
+</p><blockquote><p> Various abstractions for baseline distributed torch. <br/>
+
+<font size="-1"><a href="git://github.com/facebookresearch/TorchMPI.git">latest sources</a> | <a href="https://github.com/facebookresearch/TorchMPI" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="torchmpi-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="torchnet"></a><a href="#torchnet" class="pkg"><b>torchnet</b></a> - Torch on steroids<br/>
 </p><blockquote><p> Various abstractions for torch7. <br/>
 
